Made style changes in styles.css.

--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -7,29 +7,27 @@
     <link href="base.css" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-    <!-- Header with navigation -->
+<body class="works_on_smartphone">
+  
     <header>
         <ul>
+            <li class="logo">&#9733;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
     </header>
 
-    <!-- Main content -->
     <main>
         <article>
             <h1>My Tweets</h1>
             <p>Check out this tweet:</p>
 
-            <!-- Embedded Tweet -->
             <blockquote class="twitter-tweet">
                 <p lang="en" dir="ltr">Just setting up my Twitter.</p>&mdash; Twitter (@Twitter)
                 <a href="https://twitter.com/Twitter/status/20?ref_src=twsrc%5Etfw">March 21, 2006</a>
             </blockquote>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-            <!-- Link back to homepage -->
             <p><a href="index.html">Back to Homepage</a></p>
         </article>
 
@@ -38,7 +36,6 @@
         </aside>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>Made by EUSTACE CRENTSIL - <a href="https://www.example.com" target="_blank">here</a></p>
     </footer>
