--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,38 +7,33 @@
     <link href="base.css" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-    <!-- Header with navigation -->
+<body class="works_on_smartphone">
+
     <header>
         <ul>
+            <li class="logo">&#9733;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
     </header>
 
-    <!-- Main content -->
     <main>
         <article>
-            <!-- Headings -->
             <h1>Welcome to My Page</h1>
             <h2>About This Page</h2>
             <h3>Details</h3>
 
-            <!-- Paragraphs -->
             <p>This is the first paragraph. It introduces the page.</p>
             <p>This is the second paragraph. Here you can write some interesting content.</p>
             <p>This is the third paragraph. You can add more details about your topic here.</p>
             <p>This is the fourth paragraph. Finally, conclude your introduction or information.</p>
 
-            <!-- Clickable Image -->
             <a href="https://www.example.com" target="_blank">
                 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
             </a>
 
-            <!-- Link to tweets.html -->
             <p><a href="tweets.html">See my tweets</a></p>
 
-            <!-- Table of learners -->
             <div>
                 <table border="1">
                     <thead>
@@ -79,7 +74,6 @@
         </aside>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>Made by EUSTACE CRENTSIL - <a href="https://www.example.com" target="_blank">here</a></p>
     </footer>
